# FH

./: CMakeLists.txt
Aufgabe1/: Aufgabe1.1.cpp  Aufgabe1.2.cpp  Aufgabe1.3.cpp  Aufgabe1.4.cpp  Aufgabe1.5.cpp  Aufgabe1.6.cpp  Aufgabe1.7.cpp  Aufgabe1.8.cpp
Aufgabe10/: Aufgabe10.1.cpp  Aufgabe10.2.cpp  Aufgabe10.3.cpp  Aufgabe10.4.cpp  Aufgabe10.5.cpp
Aufgabe11/: Aufgabe11.1.cpp  MyQueue.h
Aufgabe2/: Aufgabe2.1.cpp  Aufgabe2.2.cpp  Aufgabe2.3.cpp
Aufgabe3/: Aufgabe3.1.cpp  Aufgabe3.2.cpp  Aufgabe3.2.h  Aufgabe3.3.cpp  Aufgabe3.3.h  Aufgabe3.4.cpp
Aufgabe4/: Aufgabe4.1.cpp  Aufgabe4.2.cpp  Aufgabe4.3.cpp  IntMenge.cpp  IntMenge.h  rational.h
Aufgabe5/: Aufgabe5.1.cpp  Aufgabe5.2.cpp  Aufgabe5.3.cpp  Aufgabe5.4.cpp  Aufgabe5.5.cpp  Aufgabe5.6.cpp  Test.txt  array2d.h
Aufgabe6/: Aufgabe6.2.cpp  Teilnehmer.cpp  Teilnehmer.h  meinstring.h  meinstringMain.cpp
Aufgabe7/: Aufgabe7.1.cpp  Person.h  Professor.h  Student.h
Aufgabe8/: datum.cpp  datum.h  meinstring.cpp  meinstring.h  meinstringMain.cpp  rational.cpp  rational.h  rationalMain.cpp
Aufgabe9/: Aufgabe9.1.cpp  test.txt
